# cmake-project-template

./: .gitignore  CMakeLists.txt  README.md
cppexe/src/: CMakeLists.txt  main.cpp
cpplib/src/: CppLibConfig.cmake
src/: CMakeLists.txt  lib_source.cpp  lib_source.h
src/include/cpplib/: lib_header.h
test/: CMakeLists.txt  tests_source.cpp
